--- a/index.html
+++ b/index.html
@@ -2,64 +2,73 @@
 <html lang= "eng">
 <head>
 <meta charset="utf-8 ">
+<link rel="stylesheet" type="text/css" href="cssreset.css">
+<link rel ="stylesheet" type="text/css" href="style.css">
+<link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Balthazar" rel="stylesheet">
 <title>planetinfo</title>
 </head>
 <body>
-<table>
+<h1>planet information </h1>
+<table id="tablestyle">
 <tr>
-  <th>DATA</th>
-  <th>MERCURY</th>
-  <th>VENUS</th>
-  <th>EARTH</th>
-  <th>MARS</th>
+  <th id ="data" class="boldfont">DATA</th>
+  <th class="boldfont"><img src="merglobe.gif" alt=" MERCURY" title="MERCURY">MERCURY</th>
+  <th class="boldfont"><img src="venglobe.gif" alt=" VENUS" title="VENUS">VENUS</th>
+  <th class="boldfont"><img src="earglobe.gif" alt=" EARTH" title="EARTH">EARTH</th>
+  <th class="boldfont"><img src="marglobe.gif" alt=" MARS" title="MARS">MARS</th>
 </tr>
 <tr>
-<td>Mass (kg)</td>
-<td>3.3x10<sup>23</sup> </td>
-<td>4.87 x 10<sup>24</sup></td>   
-<td>5.98 x 10<sup>24</sup></td>   
-<td>6.42 x 10<sup>23</sup></td>      
+<td class="boldfont">Mass (kg)</td>
+<td class="info">3.3x10<sup>23</sup> </td>
+<td class="info">4.87 x 10<sup>24</sup></td>   
+<td class="info">5.98 x 10<sup>24</sup></td>   
+<td class="info">6.42 x 10<sup>23</sup></td>      
 </tr>	
 <tr>
-<td>Diameter (km)</td>
-<td>4879.4</td>   
-<td>12104</td>   
-<td>12756</td>   
-<td>6787</td>          
+<td class="boldfont">Diameter (km)</td>
+<td class="info">4879.4</td>   
+<td class="info">12104</td>   
+<td class="info">12756</td>   
+<td class="info">6787</td>          
 </tr>
 <tr>
-<td>Mean density (kg/m3)</td>
-<td>5420</td>   
-<td>5250</td>   
-<td>5520</td>   
-<td>3940</td>   
+<td class="boldfont">Mean density (kg/m3)</td>
+<td class="info">5420</td>   
+<td class="info">5250</td>   
+<td class="info">5520</td>   
+<td class="info">3940</td>   
 </tr>
 <tr>
-<td>Escape Velocity (m/s)</td>        
- <td>4300</td>   
- <td>10400</td>   
- <td>11200</td>   
- <td>5000</td>   
+<td class="boldfont">Escape Velocity (m/s)</td>        
+ <td class="info">4300</td>   
+ <td class="info">10400</td>   
+ <td class="info">11200</td>   
+ <td class="info">5000</td>   
  </tr>
 <tr>
-<td>Average Distance from Sun</td>     
-<td>0.387 AU (57,909,175 km)</td>   
-<td>0.723 AU (108,208,930 km)</td>   
-<td>1 AU (149,597,890 km)</td>   
-<td>1.524 AU (227,936,640 km)</td>   
+<td class="boldfont">Average Distance from Sun</td>     
+<td class="info">0.387 AU (57,909,175 km)</td>   
+<td class="info">0.723 AU (108,208,930 km)</td>   
+<td class="info">1 AU (149,597,890 km)</td>   
+<td class="info">1.524 AU (227,936,640 km)</td>   
 </tr>
 <tr>
-<td>Rotation Period (Length of Day in Earth Days)</td>      
- <td>58.65</td>   
- <td>243.02 (retrograde)</td>   
- <td>1 (23.93 hours)</td>   
- <td>1.026</td>   
+<td class="boldfont">Rotation Period (Length of Day in Earth Days)</td>      
+ <td class="info">58.65</td>   
+ <td class="info">243.02 (retrograde)</td>   
+ <td class="info">1 (23.93 hours)</td>   
+ <td class="info">1.026</td>   
  </tr>
 <tr>
-<td>Revolution Period (Length of Year in Earth Years)</td>
- <td>87.97</td>   
- <td>224.7</td>   
- <td>365.26</td>   
- <td>686.98</td>   
+<td class="boldfont">Revolution Period (Length of Year in Earth Years)</td>
+ <td class="info">87.97</td>   
+ <td class="info">224.7</td>   
+ <td class="info">365.26</td>   
+ <td class="info">686.98</td>   
  </tr>
+ </table>
 </body>
+<footer>
+
+</footer>
