--- a/index.html
+++ b/index.html
@@ -11,12 +11,20 @@
 <body>
 <h1>planet information </h1>
 <table id="tablestyle">
+
 <tr>
-  <th id ="data" class="boldfont">DATA</th>
-  <th class="boldfont"><img src="merglobe.gif" alt=" MERCURY" title="MERCURY">MERCURY</th>
-  <th class="boldfont"><img src="venglobe.gif" alt=" VENUS" title="VENUS">VENUS</th>
-  <th class="boldfont"><img src="earglobe.gif" alt=" EARTH" title="EARTH">EARTH</th>
-  <th class="boldfont"><img src="marglobe.gif" alt=" MARS" title="MARS">MARS</th>
+  <th></th>
+  <th><img src="merglobe.gif" alt=" MERCURY" title="MERCURY"></th>
+  <th><img src="venglobe.gif" alt=" VENUS" title="VENUS"></th>
+  <th><img src="earglobe.gif" alt=" EARTH" title="EARTH"></th>
+  <th><img src="marglobe.gif" alt=" MARS" title="MARS"></th>
+</tr>
+<tr>
+<td class="boldfont">DATA</td>
+<td class="boldfont">MERCURY</td>
+<td class="boldfont">VENUS</td>
+<td class="boldfont">EARTH</td>
+<td class="boldfont">MARS</td>
 </tr>
 <tr>
 <td class="boldfont">Mass (kg)</td>
