--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
-<html lang= "eng">
+<html lang= "en">
 <head>
-<meta charset="utf-8 ">
+<meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="cssreset.css">
 <link rel ="stylesheet" type="text/css" href="style.css">
 <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
@@ -76,7 +76,8 @@
  <td class="info">686.98</td>   
  </tr>
  </table>
-</body>
-<footer>
-
+ <footer>
+<h1>created by changhui kim</h1>
 </footer>
+</body>
+
